# Equidox-AI

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  FRONTEND_UI.md  PROJECT_STATUS.md  README.md  docker-compose.yml  package.json
backend/: .env.example  .env.railway.example  Dockerfile  docker-entrypoint.sh  package-lock.json  package.json  railway.toml
backend/ai/: README.md  index.js
backend/ai/examples/: approved.json  manual_review.json  rejected.json
backend/ai/lib/: analysisCache.js  contextBuilder.js  files.js  promptAssembler.js  schema.js  skillLoader.js  validate.js
backend/ai/mcp/: adapters.js
backend/ai/pipeline/: runReview.js  stages.js
backend/ai/prompts/: decision_rules.md  output_schema.md  reviewer.md  scoring.md  system.md
backend/ai/skills/: api-review.md  architecture-review.md  docker-review.md  documentation-review.md  github-review.md  grant-review.md  nextjs-review.md  node-review.md  (+8 more)
backend/src/: index.js
contracts/builder-passport/: Cargo.toml
contracts/builder-passport/src/: lib.rs  passport.rs  test.rs
contracts/builder-passport/test_snapshots/test/: test_initialize_passport.1.json  test_invalid_reputation_delta.1.json  test_record_milestone_completion_and_badge.1.json
contracts/common/: Cargo.toml
contracts/grant-manager/: Cargo.toml
docs/: MAINNET_DEPLOYMENT.md  RAILWAY.md
frontend/: .dockerignore  .env.railway.example  Dockerfile  crop.mjs  package-lock.json  package.json  railway.toml  resize_icon.mjs
keycloak/: Dockerfile  equidox-realm.json  railway.toml
scripts/: deploy.ps1  initialize.ps1
(+81 files in other folders)
